adding game logic layout